# ProjectLobotomy

./: .gitignore  CMakeLists.txt  CMakePresets.json  LobotomyApp.cpp  README.md
res/: resources.qrc
src/: LobotomyApp.cpp  LobotomyApp.h  main.cpp
